<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_text_games_character_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_games_character_name"/>

    <Button
        android:id="@+id/btn_games_tutorial_begin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_games_tutorial_begin"/>

    <Button
        android:id="@+id/btn_games_tutorial_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_games_tutorial_end"/>

    <Button
        android:id="@+id/btn_games_level_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_games_level_up"/>

    <Button
        android:id="@+id/btn_games_earn_virtual_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_games_earn_virtual_currency"/>

    <Button
        android:id="@+id/btn_games_spend_virtual_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_games_spend_virtual_currency"/>

    <Button
        android:id="@+id/btn_games_unlock_achievement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_games_unlock_achievement"/>

</LinearLayout>