<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="8dp">

    <Button
        android:id="@+id/btn_launch_user_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_launch_user_details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_events_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_launch_user_details"
        android:textSize="26sp"
        android:text="@string/txt_events_title"/>

    <Button
        android:id="@+id/btn_launch_ecommerce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_launch_ecommerce"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_events_title" />

    <Button
        android:id="@+id/btn_launch_gaming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_launch_gaming"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_launch_ecommerce" />

    <Button
        android:id="@+id/btn_launch_travel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_launch_travel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_launch_gaming" />

    <Button
        android:id="@+id/btn_reset_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset_data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <TextView
        android:id="@+id/txt_search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_launch_travel"
        android:textSize="26sp"
        android:text="@string/search"/>


    <EditText
        android:id="@+id/edit_text_search_term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_search_title"
        android:padding="12dp"
        android:hint="@string/search_term"/>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_search_term" />

    <TextView
        android:id="@+id/txt_consent_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_search"
        android:textSize="26sp"
        android:text="@string/consent"/>

    <Button
        android:id="@+id/btn_consent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_consent_title" />


</androidx.constraintlayout.widget.ConstraintLayout>