<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/analytics_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/analytics_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analytics_storage" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/sw_analytics_storage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:checked="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ad_storage_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ad_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ad_storage" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/sw_ad_storage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:checked="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ad_personalization_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ad_personalization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ad_personalization" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/sw_ad_personalization"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:checked="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ad_user_data_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ad_user_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ad_user_data" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/sw_ad_user_data"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:checked="true" />
    </LinearLayout>

    <Button
        android:id="@+id/set_consent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_consent" />
</LinearLayout>